# corsair-headset

./: .gitignore  Cargo.toml  FINDINGS.md  Makefile  README.md  flake.nix  result
.github/workflows/: ci.yml  release.yml
bundle/: AppIcon.icns  Info.plist
crates/corsair-cli/: Cargo.toml
crates/corsair-cli/src/: main.rs
crates/corsair-device/: Cargo.toml
crates/corsair-proto/: Cargo.toml
crates/corsair-proto/src/: devices.rs  error.rs  lib.rs  report.rs  types.rs
crates/corsair-proto/src/bragi/: convert.rs  mod.rs  property_id.rs  types.rs
crates/corsair-proto/src/cxaudio/: cape.rs  mod.rs  types.rs
crates/corsair-proto/src/legacy/: firmware.rs  lighting.rs  mod.rs  mode.rs  pairing.rs  power.rs  sidetone.rs  state.rs  types.rs  value.rs
crates/corsair-transport/: Cargo.toml
crates/corsair-transport/src/: error.rs  lib.rs  native.rs  paced.rs
crates/corsair-tray/: Cargo.toml
crates/corsair-tray/src/: headset.rs  icon.rs  main.rs  notify.rs  settings.rs
crates/corsair-web/: Cargo.toml
manifests/: generic_headset.json  hs45_surround.json  hs55_surround.json  hs55_wireless.json  hs55_wireless_core.json  hs60_pro_surround.json  hs60_surround.json  hs65_surround.json  hs65_wireless.json  hs70_bluetooth.json  hs70_pro_wireless.json  hs70_wireless.json  hs80.json  hs80_rgb_usb.json  hs80_white.json  virtuoso_black.json  virtuoso_pearl.json  virtuoso_se_brown.json  virtuoso_se_gunmetal.json  virtuoso_white.json  virtuoso_xt_gunmetal.json  virtuoso_xt_t_pain.json  void_elite_surround_carbon.json  void_elite_surround_cherry.json  void_elite_usb_carbon.json  void_elite_usb_white.json  void_elite_wireless_carbon.json  void_elite_wireless_grey.json  void_elite_wireless_white.json  void_pro_surround_carbon.json  void_pro_surround_cherry.json  void_pro_usb_carbon.json  void_pro_usb_ig.json  void_pro_usb_white.json  void_pro_wireless_carbon.json  void_pro_wireless_se_yellow.json  void_pro_wireless_white.json  void_surround_carbon.json  void_surround_red.json  void_usb_black_1.json  (+6 more)
notes/: bragi_property_ids.md  bragi_protocol.md  device_catalog.csv  firmware_update_protocol.md  transport_design.md
