[workspace]
resolver = "2"
members = [
    "crates/corsair-proto",
    "crates/corsair-transport",
    "crates/corsair-cli",
    "crates/corsair-tray",
]

[workspace.package]
version = "0.8.0"
edition = "2024"

# Lints are configured per-crate in each crate's Cargo.toml.
# Shared baseline:
#   - unsafe_code = deny
#   - unwrap_used, expect_used, panic, todo, unreachable = deny (libs)
#   - correctness = deny, suspicious/style/complexity/perf = warn

[workspace.dependencies]
# Internal
corsair-proto = { path = "crates/corsair-proto" }
corsair-transport = { path = "crates/corsair-transport" }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures-core = "0.3"

# HID
hidapi = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-oslog = "0.3"

# Bit manipulation
bitflags = "2"

# Directories
dirs = "6"

# macOS
objc2-foundation = "0.3"

# Tray / Menu bar
tao = "0.35"
tray-icon = "0.22"
muda = "0.17"
