[package]
name = "corsair-proto"
description = "Corsair HID protocol types, codec, and feature encode/decode (Legacy + Bragi)"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
indexing_slicing = "allow"
missing_errors_doc = "allow"
