[package]
name = "corsair-transport"
description = "Platform-agnostic async transport trait + hidapi native backend"
version.workspace = true
edition.workspace = true

[features]
default = ["native"]
native = ["dep:hidapi", "dep:tokio", "dep:tokio-stream"]

[dependencies]
corsair-proto = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
hidapi = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
